Финальная работа по модулю Exceptions v2
- доработал комментарии